# fileengine_threaded_communication

./: .env.example  .gitignore  README.md  SPECIFICATION.md  pyproject.toml
migrations/: 0001_baseline.sql
src/discussion/: __init__.py  _client.py  activity_store.py  api.py  app.py  audit.py  bridge_auth.py  chunking.py  config.py  consumer.py  core_client.py  dashboard_api.py  db.py  deps.py  digest.py  digest_api.py  digest_store.py  directory.py  embeddings.py  events.py  failover.py  http_auth.py  indexing.py  jwt_verify.py  ldap_auth.py  live.py  live_api.py  mailer.py  markdown_text.py  mcp_server.py  mcp_tools.py  netutil.py  notifications.py  permissions.py  provenance.py  reviews_api.py  reviews_store.py  schedule.py  schema.py  search.py  (+6 more)
src/tests/: __init__.py  test_api.py  test_config.py  test_consumer.py  test_dashboard.py  test_digest.py  test_digest_api.py  test_live.py  test_markdown.py  test_mcp_tools.py  test_monitoring_allowlist.py  test_permissions_cache.py  test_provenance.py  test_reviews.py  test_schedule.py  test_schema.py  test_search.py  test_threads.py
