[project]
name = "discussion-threaded-communication"
version = "0.1.0"
description = "FileEngine document-anchored threaded discussion & review service (permission-gated)"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "James Hickman", email = "james@rationalboxes.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "ldap3>=2.9",
    "grpcio>=1.50",
    "protobuf>=4.21",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]
# The FileEngine Python client (`fileengine`, from ../python_interface) is reused
# at runtime for gRPC core access (permission checks) exactly as CSAI / the MCP
# server do. Install it (`pip install ../python_interface`) or rely on the
# sibling-checkout bootstrap in discussion._client.

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.27"]

[project.scripts]
discussion = "discussion.app:main"
discuss-consumer = "discussion.consumer:main"   # core-event consumer (§8 / M4a)
# discuss-digest = "discussion.digest:main"     # added in M6 (§11c)

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["live: integration test that needs LDAP + the gRPC core + Postgres reachable"]
